# anilistpy

./: .gitignore  .travis.yml  Cargo.toml  README.md  license  setup.py  test.py
.github/workflows/: build-test.yml  python-publish.yml  test.yml
anilistpy/: __init__.py  anime.py  char.py  manga.py  mt_media.py  sr_manga.py  staff.py  studio.py  utils.py
anilistpy/mutation/: __init__.py  media.py  user.py
anilistpy/search/: __init__.py  anime.py  char.py  manga.py  staff.py  studio.py
anilistpy/user/: __init__.py  medialist.py
docs/: index.html
docs/html/: anime.html  example.html  manga.html  menu.html  top.html
src/: lib.rs  studio.rs
test/: mutation-2.py  mutation.py
