[package]
name = "anilistpy"
version = "0.1.0"
authors = ["0kalekale <kalekale.anon@gmail.com>"]
edition = "2018"

[dependencies]
ureq = { version = "2.0.1", features = ["json", "charset"] }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[lib]
name = "anilistpy"
crate-type = ["cdylib"]
